<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- General info -->
	<url>http://www.dna-evolutions.com/</url>
	<groupId>jopt</groupId>
	<version>1.0.0-SNAPSHOT</version>
	<artifactId>jopt.public.rest.client</artifactId>
	<name>Java clients for DNA Rest endpoints</name>
	<inceptionYear>2017</inceptionYear>
	<description>Public example of generated clients for DNA swagger rest endpoints.</description>

	<properties>
		<project.build.sourceEncoding>cp1252</project.build.sourceEncoding>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>

		<swagger-annotations.version>1.6.6</swagger-annotations.version>
		<jersey.version>2.35</jersey.version>
		
		<jackson-jaxrs-base.version>2.14.1</jackson-jaxrs-base.version>
		<jackson-annotations.version>2.14.1</jackson-annotations.version>
		<jackson-databind.version>2.14.1</jackson-databind.version>
		<jackson-jaxrs-json-provider.version>2.14.1</jackson-jaxrs-json-provider.version>
		<jackson-databind-nullable.version>0.2.4</jackson-databind-nullable.version>
		<jackson-datatype-threetenbp.version>2.13.0-rc2</jackson-datatype-threetenbp.version>
		<jackson-datatype-joda.version>2.14.1</jackson-datatype-joda.version>
		<jackson-datatype-jsr310.version>2.14.1</jackson-datatype-jsr310.version>
		
		
		<joda-time.version>2.12.2</joda-time.version>
		<scribejava-apis.version>8.3.3</scribejava-apis.version>
		
		<spring-web.version>6.0.2</spring-web.version>
		<spring-webflux.version>6.0.2</spring-webflux.version>
		<spring-boot-starter-webflux.version>3.0.0</spring-boot-starter-webflux.version>
				
		<jsr305.version>3.0.2</jsr305.version>
		<httpclient.version>5.2.1</httpclient.version>
		<migbase64.version>2.2</migbase64.version>
		<threetenbp.version>1.6.5</threetenbp.version>
		
		<!-- During build -->
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<openapi-generator-maven-plugin.version>6.2.1</openapi-generator-maven-plugin.version>
		
	</properties>


	<organization>
		<name>DNA Evolutions GmbH</name>
		<url>http://www.dna-evolutions.com/</url>
	</organization>


	<licenses>
		<license>
			<name>Custom DNA evolutions license</name>
			<url>https://www.dna-evolutions.com</url>
		</license>
	</licenses>


	<repositories>
		<repository>
			<id>jopt-maven-public</id>
			<url>https://public.repo.dna-evolutions.com/repository/maven-public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>


	<dependencies>
		<dependency>
			<groupId>org.threeten</groupId>
			<artifactId>threetenbp</artifactId>
			<version>${threetenbp.version}</version>
		</dependency>

		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger-annotations.version}</version>
		</dependency>

		<!-- You can find the dependencies for the library configuration you chose 
			by looking in JavaClientCodegen. Then find the corresponding dependency on 
			Maven Central, and set the versions in the property section below -->

		<!-- HTTP client: jersey-client -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-multipart</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<!-- @Nullable annotation -->
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>${jsr305.version}</version>
		</dependency>

		<!-- JSON processing: jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-base</artifactId>
			<version>${jackson-jaxrs-base.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson-annotations.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${jackson-jaxrs-json-provider.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>${jackson-databind-nullable.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.joschi.jackson</groupId>
			<artifactId>jackson-datatype-threetenbp</artifactId>
			<version>${jackson-datatype-threetenbp.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
			<version>${jackson-datatype-joda.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${jackson-datatype-jsr310.version}</version>
		</dependency>

		<!-- Joda time: if you use it -->
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda-time.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.scribejava</groupId>
			<artifactId>scribejava-apis</artifactId>
			<version>${scribejava-apis.version}</version>
		</dependency>
		<!-- Base64 encoding that works in both JVM and Android -->
		<dependency>
			<groupId>com.brsanthu</groupId>
			<artifactId>migbase64</artifactId>
			<version>${migbase64.version}</version>
		</dependency>
		<!-- -->

		<!-- For weblcient setting -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring-web.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webflux</artifactId>
			<version>${spring-webflux.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
			<version>${spring-boot-starter-webflux.version}</version>
		</dependency>


		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>${httpclient.version}</version>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<!-- -->
			<!-- activate the plugin -->
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<!-- RELEASE_VERSION -->
				<version>${openapi-generator-maven-plugin.version}</version>
				<!-- /RELEASE_VERSION -->

				<executions>


					<execution>
						<id>geocoder</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<verbose>false</verbose>
							<typeMappings>
								<typeMapping>OffsetDateTime=Instant</typeMapping>
							</typeMappings>
							<importMappings>
								<importMapping>java.time.OffsetDateTime=java.time.Instant</importMapping>
							</importMappings>

							<inputSpec>
								${project.basedir}/src/main/resources/swagger/geocoder/spec/geocoder_spec.json</inputSpec>
							<configurationFile>${project.basedir}/src/main/resources/swagger/geocoder/config/geocoder_openapi_config.json</configurationFile>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<output>${project.build.directory}/generated-sources/dna-rest-java-clients</output>
						</configuration>
					</execution>
					<execution>
						<id>georouter</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>

							<verbose>false</verbose>
							<typeMappings>
								<typeMapping>OffsetDateTime=Instant</typeMapping>
							</typeMappings>
							<importMappings>
								<importMapping>java.time.OffsetDateTime=java.time.Instant</importMapping>
							</importMappings>

							<!-- specify the swagger yaml -->
							<inputSpec>
								${project.basedir}/src/main/resources/swagger/georouter/spec/georouter_spec.json</inputSpec>
							<configurationFile>${project.basedir}/src/main/resources/swagger/georouter/config/georouter_openapi_config.json</configurationFile>

							<!-- target to generate java client code -->
							<generatorName>java</generatorName>

							<!-- override the default library to jersey2 - Need to be set here -->
							<library>webclient</library>

							<output>${project.build.directory}/generated-sources/dna-rest-java-clients</output>


						</configuration>
					</execution>

					<execution>
						<id>touroptimizer</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>

							<inputSpec>
								${project.basedir}/src/main/resources/swagger/touroptimizer/spec/touroptimizer_spec.json</inputSpec>
							<configurationFile>${project.basedir}/src/main/resources/swagger/touroptimizer/config/touroptimizer_openapi_config.json</configurationFile>
							<generatorName>java</generatorName>
							<verbose>false</verbose>
							<typeMappings>
								<typeMapping>OffsetDateTime=Instant</typeMapping>
							</typeMappings>
							<importMappings>
								<importMapping>java.time.OffsetDateTime=java.time.Instant</importMapping>
							</importMappings>
							<library>webclient</library>
							<output>${project.build.directory}/generated-sources/dna-rest-java-clients</output>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>

</project>
